# LucenePlusPlus

./: .gitignore  CMakeLists.txt  COPYING  README.md  bootstrap.cmd  meson.build  meson_options.txt
buildfiles/cmake/: cotire.cmake
buildfiles/native/: win-x86_64-clang.ini
dependencies/: meson.build
dependencies/boost/: CMakeLists.txt  meson.build
dependencies/dot/: meson.build
dependencies/hhc/: meson.build
dependencies/threads/: meson.build
dependencies/zlib/: CMakeLists.txt  meson.build
doc/: BUILDING.md  CMakeLists.txt  meson.build
doc/BUILDING/: Arch.md  Debian.md  NT.md
doc/doxygen/: Doxyfile.in  helpheader.htm.in  meson.build
include/: CMakeLists.txt  meson.build
include/config_h/: CMakeLists.txt  meson.build
include/lucene++/: CMakeLists.txt  meson.build
include/man/: meson.build
src/: CMakeLists.txt  meson.build
src/config/: CMakeLists.txt  meson.build
src/config/contrib/: CMakeLists.txt  liblucene++-contrib-config.cmake.in  meson.build
src/config/core/: CMakeLists.txt  meson.build
src/contrib/: CMakeLists.txt  meson.build
src/contrib/analyzers/: meson.build
src/contrib/analyzers/common/: meson.build
src/contrib/analyzers/common/analysis/ar/: meson.build
src/contrib/analyzers/common/analysis/br/: meson.build
src/contrib/analyzers/common/analysis/cjk/: meson.build
src/contrib/analyzers/common/analysis/cn/: meson.build
src/contrib/analyzers/common/analysis/cz/: meson.build
src/contrib/analyzers/common/analysis/de/: meson.build
src/contrib/analyzers/common/analysis/el/: meson.build
src/contrib/analyzers/common/analysis/fa/: meson.build
src/contrib/analyzers/common/analysis/fr/: meson.build
src/contrib/analyzers/common/analysis/nl/: meson.build
src/contrib/analyzers/common/analysis/reverse/: meson.build
src/contrib/analyzers/common/analysis/ru/: meson.build
src/contrib/highlighter/: meson.build
src/contrib/include/: meson.build
src/contrib/memory/: meson.build
src/contrib/msvc/: meson.build
src/contrib/snowball/: meson.build
src/contrib/snowball/libstemmer_c/: meson.build
src/contrib/snowball/libstemmer_c/include/: meson.build
src/contrib/snowball/libstemmer_c/libstemmer/: meson.build
src/contrib/snowball/libstemmer_c/runtime/: meson.build
src/contrib/snowball/libstemmer_c/src_c/: meson.build
src/core/: CMakeLists.txt  meson.build
src/core/analysis/: meson.build
src/core/analysis/standard/: meson.build
src/core/analysis/tokenattributes/: meson.build
src/core/document/: meson.build
src/core/include/: meson.build
src/core/index/: meson.build
src/core/msvc/: meson.build
src/core/queryparser/: meson.build
src/core/search/: meson.build
src/core/search/function/: meson.build
src/core/search/payloads/: meson.build
src/core/search/spans/: meson.build
src/core/store/: meson.build
src/core/util/: meson.build
src/core/util/md5/: meson.build
src/core/util/unicode/: meson.build
src/demo/: meson.build
src/demo/deletefiles/: meson.build
src/demo/indexfiles/: meson.build
src/demo/searchfiles/: meson.build
src/test/: CMakeLists.txt  meson.build
src/test/analysis/: meson.build
src/test/analysis/standard/: meson.build
src/test/analysis/tokenattributes/: meson.build
src/test/contrib/: meson.build
src/test/contrib/analyzers/common/analysis/: meson.build
src/test/contrib/analyzers/common/analysis/ar/: meson.build
src/test/contrib/analyzers/common/analysis/br/: meson.build
src/test/contrib/analyzers/common/analysis/cjk/: meson.build
src/test/contrib/analyzers/common/analysis/cn/: meson.build
src/test/contrib/analyzers/common/analysis/cz/: meson.build
src/test/contrib/analyzers/common/analysis/de/: meson.build
src/test/contrib/analyzers/common/analysis/el/: meson.build
src/test/contrib/analyzers/common/analysis/fa/: meson.build
src/test/contrib/analyzers/common/analysis/fr/: meson.build
src/test/contrib/analyzers/common/analysis/nl/: meson.build
src/test/contrib/analyzers/common/analysis/reverse/: meson.build
src/test/contrib/analyzers/common/analysis/ru/: meson.build
src/test/contrib/highlighter/: meson.build
src/test/contrib/memory/: meson.build
src/test/contrib/snowball/: meson.build
src/test/document/: meson.build
src/test/include/: meson.build
src/test/index/: meson.build
src/test/main/: meson.build
src/test/msvc/: meson.build
src/test/queryparser/: meson.build
src/test/search/: meson.build
src/test/search/function/: meson.build
src/test/search/payloads/: meson.build
src/test/search/spans/: meson.build
src/test/store/: meson.build
src/test/util/: meson.build
