# liblucene++-contrib.analyzers build file
#========================================================================

# include directories
#========================================================================

contrib_analyzers_dirs = [
  'common']

foreach dir : contrib_analyzers_dirs
    subdir(dir)
endforeach
