# liblucene++-contrib.highlighter build file
#========================================================================

contrib_highlighter_dir = meson.current_source_dir()

# src
#========================================================================

contrib_src += files(
    join_paths(contrib_highlighter_dir, 'DefaultEncoder.cpp'),
    join_paths(contrib_highlighter_dir, 'Encoder.cpp'),
    join_paths(contrib_highlighter_dir, 'Formatter.cpp'),
    join_paths(contrib_highlighter_dir, 'Fragmenter.cpp'),
    join_paths(contrib_highlighter_dir, 'GradientFormatter.cpp'),
    join_paths(contrib_highlighter_dir, 'Highlighter.cpp'),
    join_paths(contrib_highlighter_dir, 'HighlighterScorer.cpp'),
    join_paths(contrib_highlighter_dir, 'MapWeightedSpanTerm.cpp'),
    join_paths(contrib_highlighter_dir, 'NullFragmenter.cpp'),
    join_paths(contrib_highlighter_dir, 'QueryScorer.cpp'),
    join_paths(contrib_highlighter_dir, 'QueryTermExtractor.cpp'),
    join_paths(contrib_highlighter_dir, 'QueryTermScorer.cpp'),
    join_paths(contrib_highlighter_dir, 'SimpleFragmenter.cpp'),
    join_paths(contrib_highlighter_dir, 'SimpleHTMLEncoder.cpp'),
    join_paths(contrib_highlighter_dir, 'SimpleHTMLFormatter.cpp'),
    join_paths(contrib_highlighter_dir, 'SimpleSpanFragmenter.cpp'),
    join_paths(contrib_highlighter_dir, 'SpanGradientFormatter.cpp'),
    join_paths(contrib_highlighter_dir, 'TextFragment.cpp'),
    join_paths(contrib_highlighter_dir, 'TokenGroup.cpp'),
    join_paths(contrib_highlighter_dir, 'TokenSources.cpp'),
    join_paths(contrib_highlighter_dir, 'WeightedSpanTerm.cpp'),
    join_paths(contrib_highlighter_dir, 'WeightedSpanTermExtractor.cpp'),
    join_paths(contrib_highlighter_dir, 'WeightedTerm.cpp'))

# include directories
#========================================================================

core_inc += include_directories('.')
