# liblucene++-contrib.include build file
#========================================================================

contrib_inc_dir = meson.current_source_dir()

# src 
#========================================================================

contrib_h += files(
    join_paths(contrib_inc_dir, 'ArabicAnalyzer.h'),
    join_paths(contrib_inc_dir, 'ArabicLetterTokenizer.h'),
    join_paths(contrib_inc_dir, 'ArabicNormalizationFilter.h'),
    join_paths(contrib_inc_dir, 'ArabicNormalizer.h'),
    join_paths(contrib_inc_dir, 'ArabicStemFilter.h'),
    join_paths(contrib_inc_dir, 'ArabicStemmer.h'),
    join_paths(contrib_inc_dir, 'BrazilianAnalyzer.h'),
    join_paths(contrib_inc_dir, 'BrazilianStemFilter.h'),
    join_paths(contrib_inc_dir, 'BrazilianStemmer.h'),
    join_paths(contrib_inc_dir, 'ChineseAnalyzer.h'),
    join_paths(contrib_inc_dir, 'ChineseFilter.h'),
    join_paths(contrib_inc_dir, 'ChineseTokenizer.h'),
    join_paths(contrib_inc_dir, 'CJKAnalyzer.h'),
    join_paths(contrib_inc_dir, 'CJKTokenizer.h'),
    join_paths(contrib_inc_dir, 'ContribInc.h'),
    join_paths(contrib_inc_dir, 'CzechAnalyzer.h'),
    join_paths(contrib_inc_dir, 'DefaultEncoder.h'),
    join_paths(contrib_inc_dir, 'DutchAnalyzer.h'),
    join_paths(contrib_inc_dir, 'DutchStemFilter.h'),
    join_paths(contrib_inc_dir, 'DutchStemmer.h'),
    join_paths(contrib_inc_dir, 'ElisionFilter.h'),
    join_paths(contrib_inc_dir, 'Encoder.h'),
    join_paths(contrib_inc_dir, 'Formatter.h'),
    join_paths(contrib_inc_dir, 'Fragmenter.h'),
    join_paths(contrib_inc_dir, 'FrenchAnalyzer.h'),
    join_paths(contrib_inc_dir, 'FrenchStemFilter.h'),
    join_paths(contrib_inc_dir, 'FrenchStemmer.h'),
    join_paths(contrib_inc_dir, 'GermanAnalyzer.h'),
    join_paths(contrib_inc_dir, 'GermanStemFilter.h'),
    join_paths(contrib_inc_dir, 'GermanStemmer.h'),
    join_paths(contrib_inc_dir, 'GradientFormatter.h'),
    join_paths(contrib_inc_dir, 'GreekAnalyzer.h'),
    join_paths(contrib_inc_dir, 'GreekLowerCaseFilter.h'),
    join_paths(contrib_inc_dir, 'Highlighter.h'),
    join_paths(contrib_inc_dir, 'HighlighterScorer.h'),
    join_paths(contrib_inc_dir, 'LuceneContrib.h'),
    join_paths(contrib_inc_dir, 'MapWeightedSpanTerm.h'),
    join_paths(contrib_inc_dir, 'MemoryIndex.h'),
    join_paths(contrib_inc_dir, 'NullFragmenter.h'),
    join_paths(contrib_inc_dir, 'PersianAnalyzer.h'),
    join_paths(contrib_inc_dir, 'PersianNormalizationFilter.h'),
    join_paths(contrib_inc_dir, 'PersianNormalizer.h'),
    join_paths(contrib_inc_dir, 'QueryScorer.h'),
    join_paths(contrib_inc_dir, 'QueryTermExtractor.h'),
    join_paths(contrib_inc_dir, 'QueryTermScorer.h'),
    join_paths(contrib_inc_dir, 'ReverseStringFilter.h'),
    join_paths(contrib_inc_dir, 'RussianAnalyzer.h'),
    join_paths(contrib_inc_dir, 'RussianLetterTokenizer.h'),
    join_paths(contrib_inc_dir, 'RussianLowerCaseFilter.h'),
    join_paths(contrib_inc_dir, 'RussianStemFilter.h'),
    join_paths(contrib_inc_dir, 'RussianStemmer.h'),
    join_paths(contrib_inc_dir, 'SimpleFragmenter.h'),
    join_paths(contrib_inc_dir, 'SimpleHTMLEncoder.h'),
    join_paths(contrib_inc_dir, 'SimpleHTMLFormatter.h'),
    join_paths(contrib_inc_dir, 'SnowballAnalyzer.h'),
    join_paths(contrib_inc_dir, 'SnowballFilter.h'),
    join_paths(contrib_inc_dir, 'SpanGradientFormatter.h'),
    join_paths(contrib_inc_dir, 'TextFragment.h'),
    join_paths(contrib_inc_dir, 'TokenGroup.h'),
    join_paths(contrib_inc_dir, 'TokenSources.h'),
    join_paths(contrib_inc_dir, 'WeightedSpanTerm.h'),
    join_paths(contrib_inc_dir, 'WeightedSpanTermExtractor.h'),
    join_paths(contrib_inc_dir, 'WeightedTerm.h'))

# include directories
#========================================================================

contrib_inc += include_directories('.')
