# liblucene++-contrib.memory build file
#========================================================================

contrib_memory = meson.current_source_dir()

# src
#========================================================================

contrib_src += files(
    join_paths(contrib_memory, 'MemoryIndex.cpp'))

# include directories
#========================================================================

core_inc += include_directories('.')
