# liblucene++-contrib.msvc build file
#========================================================================

contrib_msvc = meson.current_source_dir()

# src
#========================================================================

contrib_src += files(
    join_paths(contrib_msvc, 'ContribInc.cpp'),
    join_paths(contrib_msvc, 'dllmain.cpp'))


# include directories
#========================================================================

core_inc += include_directories('.')
