# liblucene.document build file
#========================================================================

core_inc += include_directories('.')
liblucene_document_dir = meson.current_source_dir()


core_src += files(
    join_paths(liblucene_document_dir, 'AbstractAllTermDocs.cpp'),
    join_paths(liblucene_document_dir, 'AllTermDocs.cpp'),
    join_paths(liblucene_document_dir, 'BufferedDeletes.cpp'),
    join_paths(liblucene_document_dir, 'ByteBlockPool.cpp'),
    join_paths(liblucene_document_dir, 'ByteSliceReader.cpp'),
    join_paths(liblucene_document_dir, 'ByteSliceWriter.cpp'),
    join_paths(liblucene_document_dir, 'CharBlockPool.cpp'),
    join_paths(liblucene_document_dir, 'CheckIndex.cpp'),
    join_paths(liblucene_document_dir, 'CompoundFileReader.cpp'),
    join_paths(liblucene_document_dir, 'CompoundFileWriter.cpp'),
    join_paths(liblucene_document_dir, 'ConcurrentMergeScheduler.cpp'),
    join_paths(liblucene_document_dir, 'DefaultSkipListReader.cpp'),
    join_paths(liblucene_document_dir, 'DefaultSkipListWriter.cpp'),
    join_paths(liblucene_document_dir, 'DirectoryReader.cpp'),
    join_paths(liblucene_document_dir, 'DocConsumer.cpp'),
    join_paths(liblucene_document_dir, 'DocConsumerPerThread.cpp'),
    join_paths(liblucene_document_dir, 'DocFieldConsumer.cpp'),
    join_paths(liblucene_document_dir, 'DocFieldConsumerPerField.cpp'),
    join_paths(liblucene_document_dir, 'DocFieldConsumerPerThread.cpp'),
    join_paths(liblucene_document_dir, 'DocFieldConsumers.cpp'),
    join_paths(liblucene_document_dir, 'DocFieldConsumersPerField.cpp'),
    join_paths(liblucene_document_dir, 'DocFieldConsumersPerThread.cpp'),
    join_paths(liblucene_document_dir, 'DocFieldProcessor.cpp'),
    join_paths(liblucene_document_dir, 'DocFieldProcessorPerField.cpp'),
    join_paths(liblucene_document_dir, 'DocFieldProcessorPerThread.cpp'),
    join_paths(liblucene_document_dir, 'DocInverter.cpp'),
    join_paths(liblucene_document_dir, 'DocInverterPerField.cpp'),
    join_paths(liblucene_document_dir, 'DocInverterPerThread.cpp'),
    join_paths(liblucene_document_dir, 'DocumentsWriter.cpp'),
    join_paths(liblucene_document_dir, 'DocumentsWriterThreadState.cpp'),
    join_paths(liblucene_document_dir, 'FieldInfo.cpp'),
    join_paths(liblucene_document_dir, 'FieldInfos.cpp'),
    join_paths(liblucene_document_dir, 'FieldInvertState.cpp'),
    join_paths(liblucene_document_dir, 'FieldSortedTermVectorMapper.cpp'),
    join_paths(liblucene_document_dir, 'FieldsReader.cpp'),
    join_paths(liblucene_document_dir, 'FieldsWriter.cpp'),
    join_paths(liblucene_document_dir, 'FilterIndexReader.cpp'),
    join_paths(liblucene_document_dir, 'FormatPostingsDocsConsumer.cpp'),
    join_paths(liblucene_document_dir, 'FormatPostingsDocsWriter.cpp'),
    join_paths(liblucene_document_dir, 'FormatPostingsFieldsConsumer.cpp'),
    join_paths(liblucene_document_dir, 'FormatPostingsFieldsWriter.cpp'),
    join_paths(liblucene_document_dir, 'FormatPostingsPositionsConsumer.cpp'),
    join_paths(liblucene_document_dir, 'FormatPostingsPositionsWriter.cpp'),
    join_paths(liblucene_document_dir, 'FormatPostingsTermsConsumer.cpp'),
    join_paths(liblucene_document_dir, 'FormatPostingsTermsWriter.cpp'),
    join_paths(liblucene_document_dir, 'FreqProxFieldMergeState.cpp'),
    join_paths(liblucene_document_dir, 'FreqProxTermsWriter.cpp'),
    join_paths(liblucene_document_dir, 'FreqProxTermsWriterPerField.cpp'),
    join_paths(liblucene_document_dir, 'FreqProxTermsWriterPerThread.cpp'),
    join_paths(liblucene_document_dir, 'IndexCommit.cpp'),
    join_paths(liblucene_document_dir, 'IndexDeletionPolicy.cpp'),
    join_paths(liblucene_document_dir, 'IndexFileDeleter.cpp'),
    join_paths(liblucene_document_dir, 'IndexFileNameFilter.cpp'),
    join_paths(liblucene_document_dir, 'IndexFileNames.cpp'),
    join_paths(liblucene_document_dir, 'IndexReader.cpp'),
    join_paths(liblucene_document_dir, 'IndexWriter.cpp'),
    join_paths(liblucene_document_dir, 'IntBlockPool.cpp'),
    join_paths(liblucene_document_dir, 'InvertedDocConsumer.cpp'),
    join_paths(liblucene_document_dir, 'InvertedDocConsumerPerField.cpp'),
    join_paths(liblucene_document_dir, 'InvertedDocConsumerPerThread.cpp'),
    join_paths(liblucene_document_dir, 'InvertedDocEndConsumer.cpp'),
    join_paths(liblucene_document_dir, 'InvertedDocEndConsumerPerField.cpp'),
    join_paths(liblucene_document_dir, 'InvertedDocEndConsumerPerThread.cpp'),
    join_paths(liblucene_document_dir, 'KeepOnlyLastCommitDeletionPolicy.cpp'),
    join_paths(liblucene_document_dir, 'LogByteSizeMergePolicy.cpp'),
    join_paths(liblucene_document_dir, 'LogDocMergePolicy.cpp'),
    join_paths(liblucene_document_dir, 'LogMergePolicy.cpp'),
    join_paths(liblucene_document_dir, 'MergeDocIDRemapper.cpp'),
    join_paths(liblucene_document_dir, 'MergePolicy.cpp'),
    join_paths(liblucene_document_dir, 'MergeScheduler.cpp'),
    join_paths(liblucene_document_dir, 'MultiLevelSkipListReader.cpp'),
    join_paths(liblucene_document_dir, 'MultiLevelSkipListWriter.cpp'),
    join_paths(liblucene_document_dir, 'MultipleTermPositions.cpp'),
    join_paths(liblucene_document_dir, 'MultiReader.cpp'),
    join_paths(liblucene_document_dir, 'NormsWriter.cpp'),
    join_paths(liblucene_document_dir, 'NormsWriterPerField.cpp'),
    join_paths(liblucene_document_dir, 'NormsWriterPerThread.cpp'),
    join_paths(liblucene_document_dir, 'ParallelReader.cpp'),
    join_paths(liblucene_document_dir, 'Payload.cpp'),
    join_paths(liblucene_document_dir, 'PositionBasedTermVectorMapper.cpp'),
    join_paths(liblucene_document_dir, 'RawPostingList.cpp'),
    join_paths(liblucene_document_dir, 'ReadOnlyDirectoryReader.cpp'),
    join_paths(liblucene_document_dir, 'ReadOnlySegmentReader.cpp'),
    join_paths(liblucene_document_dir, 'ReusableStringReader.cpp'),
    join_paths(liblucene_document_dir, 'SegmentInfo.cpp'),
    join_paths(liblucene_document_dir, 'SegmentInfoCollection.cpp'),
    join_paths(liblucene_document_dir, 'SegmentInfos.cpp'),
    join_paths(liblucene_document_dir, 'SegmentMergeInfo.cpp'),
    join_paths(liblucene_document_dir, 'SegmentMergeQueue.cpp'),
    join_paths(liblucene_document_dir, 'SegmentMerger.cpp'),
    join_paths(liblucene_document_dir, 'SegmentReader.cpp'),
    join_paths(liblucene_document_dir, 'SegmentTermDocs.cpp'),
    join_paths(liblucene_document_dir, 'SegmentTermEnum.cpp'),
    join_paths(liblucene_document_dir, 'SegmentTermPositions.cpp'),
    join_paths(liblucene_document_dir, 'SegmentTermPositionVector.cpp'),
    join_paths(liblucene_document_dir, 'SegmentTermVector.cpp'),
    join_paths(liblucene_document_dir, 'SegmentWriteState.cpp'),
    join_paths(liblucene_document_dir, 'SerialMergeScheduler.cpp'),
    join_paths(liblucene_document_dir, 'SnapshotDeletionPolicy.cpp'),
    join_paths(liblucene_document_dir, 'SortedTermVectorMapper.cpp'),
    join_paths(liblucene_document_dir, 'StoredFieldsWriter.cpp'),
    join_paths(liblucene_document_dir, 'StoredFieldsWriterPerThread.cpp'),
    join_paths(liblucene_document_dir, 'Term.cpp'),
    join_paths(liblucene_document_dir, 'TermBuffer.cpp'),
    join_paths(liblucene_document_dir, 'TermDocs.cpp'),
    join_paths(liblucene_document_dir, 'TermEnum.cpp'),
    join_paths(liblucene_document_dir, 'TermFreqVector.cpp'),
    join_paths(liblucene_document_dir, 'TermInfo.cpp'),
    join_paths(liblucene_document_dir, 'TermInfosReader.cpp'),
    join_paths(liblucene_document_dir, 'TermInfosWriter.cpp'),
    join_paths(liblucene_document_dir, 'TermPositions.cpp'),
    join_paths(liblucene_document_dir, 'TermPositionVector.cpp'),
    join_paths(liblucene_document_dir, 'TermsHash.cpp'),
    join_paths(liblucene_document_dir, 'TermsHashConsumer.cpp'),
    join_paths(liblucene_document_dir, 'TermsHashConsumerPerField.cpp'),
    join_paths(liblucene_document_dir, 'TermsHashConsumerPerThread.cpp'),
    join_paths(liblucene_document_dir, 'TermsHashPerField.cpp'),
    join_paths(liblucene_document_dir, 'TermsHashPerThread.cpp'),
    join_paths(liblucene_document_dir, 'TermVectorEntry.cpp'),
    join_paths(liblucene_document_dir, 'TermVectorEntryFreqSortedComparator.cpp'),
    join_paths(liblucene_document_dir, 'TermVectorMapper.cpp'),
    join_paths(liblucene_document_dir, 'TermVectorOffsetInfo.cpp'),
    join_paths(liblucene_document_dir, 'TermVectorsReader.cpp'),
    join_paths(liblucene_document_dir, 'TermVectorsTermsWriter.cpp'),
    join_paths(liblucene_document_dir, 'TermVectorsTermsWriterPerField.cpp'),
    join_paths(liblucene_document_dir, 'TermVectorsTermsWriterPerThread.cpp'),
    join_paths(liblucene_document_dir, 'TermVectorsWriter.cpp'))
    