# liblucene++-contrib.msvc build file
#========================================================================

core_inc += include_directories('.')
lublucene_msvc_dir = meson.current_source_dir()


core_src += files(
    join_paths(lublucene_msvc_dir, 'dllmain.cpp'),
    join_paths(lublucene_msvc_dir, 'LuceneInc.cpp'))
